--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ h1 {
 	font-size:4vw;
 	font-weight: bold;
 	text-align: center;
-
 }
 
 h3 {
@@ -22,14 +21,12 @@ h3 {
 	font-size:1.25vw;
 	font-weight: bold;
 	text-align: center;
-
 }
 
 h6 {
 	font-size: 0.5vw;
 	font-weight: thin;
 	text-align: center;
-
 }
 
 .img1 {
@@ -67,91 +64,81 @@ h6 {
 	/*color: #ffffff;*/
 	padding: 0px;
 	height: 0px;
+	position: fixed;
 }
 
-/* Important styles */
-#toggle {
-	display: block;
-	width: 28px;
-	height: 20px;
-	margin: 20px 5px 0px;
-}
-
-#toggle span:after,
-#toggle span:before {
-	content: "";
-	position: absolute;
-	left: 0px;
-	top: -9px;
-}
-#toggle span:after{
-	top: 9px;
-}
-#toggle span {
-	position: relative;
-	display: block;
-}
-
-#toggle span,
-#toggle span:after,
-#toggle span:before {
-	width: 100%;
-	height: 5px;
-	background-color: #888;
-	transition: all 0.3s;
-	backface-visibility: hidden;
-	border-radius: 2px;
-}
-
-/* on activation */
-#toggle.on span {
-	background-color: transparent;
-}
-#toggle.on span:before {
-	transform: rotate(45deg) translate(5px, 5px);
-}
-#toggle.on span:after {
-	transform: rotate(-45deg) translate(7px, -8px);
-}
-#toggle.on + #menu {
-	opacity: 1;
-	visibility: visible;
-}
-
-/* menu appearance*/
-#menu {
-	position: absolute;
-	color: black;
-	width: 100px;
-	padding: 0px;
-	margin: auto;
-	font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans",
-		"Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
-	text-align: center;
-	border-radius: 4px;
-	background: white;
-	box-shadow: 0 1px 8px rgba(0,0,0,0.05);
-	/* just for this demo */
-	opacity: 0;
-	visibility: hidden;
-	transition: opacity .4s;
-}
-
-ul, li, li a {
-	list-style: none;
-	display: block;
+.nav {
+	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
+	position: fixed;
+	background-color: transparent;
+	height: 25px;
 }
-li a {
-	padding: 5px;
-	color: black;
+
+.nav li {
+  	float: left;
+	border-right: 1px dotted gray;
+	text-align:center
+}
+
+.nav li:last-child {
+	border-right: none;
+}
+
+.nav li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 0px 15px 0px;
 	text-decoration: none;
-	transition: all .2s;
 }
-li a:hover,
-li a:focus {
-	background: #1ABC9C;
-	color: #fff;
-	border-radius: 4px;
+
+.nav li a:hover:not(.active) {
+	background-color: white;
+	border-radius: 5px;
+	color: black;
+}
+
+.active {
+	background-color: blue;
+}
+
+.social {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	font-size: 2vw;
+	padding-left: 30px;
+}
+
+.social  li {
+	color: rgba(167, 146, 129, 0.6);
+	list-style-type: none;
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	line-height: 35px;
+	padding: 0%;
+	border: 1px dotted rgba(167, 146, 129, 0.4);
+	cursor: pointer;
+	margin-left: 10px;
+	margin-bottom: 20px;
+
+	border-radius: 3px;
+
+	transition: ease .3s;
+	&:hover {
+	color: rgba(167, 146, 129, 1);
+	border: 1px solid rgba(167, 146, 129, 1);
+	}
+}
+
+.social:hover > li {
+  opacity: 0.25;
+}
+
+.social:hover > li:hover {
+  opacity: 1;
 }
